--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,11 @@
 <project basedir=".">
     <path id = "compile.classpath">
-        <fileset dir="${basedir}/lib">
-            <include name="*.jar"/>
-           <!-- <include name="java-mail-1.4.jar"/>-->
+        <fileset dir="${basedir}" >
+
+           <include name="java-mail-1.4.jar"/>
+            <include name="selenium-java-2.37.0.jar"/>
+            <include name="selenium-java-2.37.0-srcs.jar"/>
+            <include name="selenium-server-standalone-2.37.0.jar"/>
         </fileset>
     </path>
     <target name="clean">
@@ -15,18 +18,23 @@
             <classpath refid="compile.classpath"/>
         </javac>
     </target>
+    <manifestclasspath property="manifest.classpath" jarfile="${basedir}">
+        <classpath refid="compile.classpath"/>
+    </manifestclasspath>
 
     <target name="jar" depends="compile">
         <mkdir dir="${basedir}/build/jar"/>
+        <copy file="${basedir}/exe/chromedriver" todir="${basedir}/build/jar/"/>
         <jar destfile="${basedir}/build/jar/ScreenShot.jar" basedir="${basedir}/build/classes">
             <manifest>
                 <attribute name="Main-Class" value="ScreenShot"/>
-                <attribute name="Class-Path" value="java-mail-1.4.jar"/>
+                <attribute name="Class-Path"  value="${manifest.classpath}"/>
             </manifest>
+
         </jar>
-        <copy todir="${basedir}/build/jar">
-            <fileset dir="${basedir}/lib">
-                <include name="*"/>
+        <copy todir="${basedir}">
+            <fileset dir="${basedir}">
+                <include name="*.jar"/>
                 <type type="file"/>
             </fileset>
         </copy>
